// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Slider renders disabled Slider correctly 1`] = `
<div>
  <div
    class="group/fui-slider"
    data-disabled="true"
    data-orientation="horizontal"
    data-size="medium"
    style="--fui-Slider--direction: 90deg; --fui-Slider--progress: 50%;"
  >
    <input
      class=""
      disabled=""
      id="slider-_r_c_"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Slider renders horizontal Slider correctly 1`] = `
<div>
  <div
    class="group/fui-slider"
    data-orientation="horizontal"
    data-size="medium"
    style="--fui-Slider--direction: 90deg; --fui-Slider--progress: 50%;"
  >
    <input
      class=""
      id="slider-_r_a_"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div>
  <div
    class="group/fui-slider"
    data-orientation="vertical"
    data-size="medium"
    style="--fui-Slider--direction: 0deg; --fui-Slider--progress: 50%;"
  >
    <input
      class=""
      id="slider-_r_b_"
      max="10"
      min="0"
      orient="vertical"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;
